generate non_parm function

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,14 @@
 Package: optinterv
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Optimal Intervention
 Version: 0.1.0
-Author: Who wrote it
+Author: Oren Danieli & Elad Guttman
 Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Description: A package for identifying the factors with the greatest potential 
+  to increase a pre-specified outcome, using observational data.
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
+Imports:
+  rootSolve
+RoxygenNote: 6.1.1
