--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,8 @@ LazyData: true
 Imports:
   rootSolve
 RoxygenNote: 6.1.1
+Suggests: 
+    knitr,
+    rmarkdown,
+    testthat
+VignetteBuilder: knitr
