perm_test + plot_change

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,8 @@ Imports:
     rootSolve,
     distances,
     weights,
-    boot
+    boot,
+    lattice
 RoxygenNote: 6.1.1
 Suggests: 
     knitr,
