--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,10 +3,10 @@ Type: Package
 Title: Optimal Intervention
 Version: 0.1.0
 Author: Oren Danieli & Elad Guttman
-Maintainer: The package maintainer <yourself@somewhere.net>
+Maintainer: The package maintainer <eladguttman@mail.tau.ac.il>
 Description: identifies the factors with the greatest potential 
   to increase a pre-specified outcome, using observational data.
-License: What license is it under?
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Imports:
