add progress report & boot_default

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,8 @@ Imports:
     distances,
     weights,
     boot,
-    lattice
+    lattice,
+    pbapply
 RoxygenNote: 6.1.1
 Suggests: 
     knitr,
