--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,3 +6,22 @@ S3method(summary,optint)
 export(optint)
 export(optint_by_group)
 export(plot_change)
+importFrom(boot,boot)
+importFrom(graphics,abline)
+importFrom(graphics,dotchart)
+importFrom(graphics,legend)
+importFrom(graphics,lines)
+importFrom(graphics,points)
+importFrom(graphics,title)
+importFrom(pbapply,closepb)
+importFrom(pbapply,setpb)
+importFrom(pbapply,startpb)
+importFrom(stats,cov.wt)
+importFrom(stats,lm)
+importFrom(stats,pnorm)
+importFrom(stats,predict)
+importFrom(stats,qnorm)
+importFrom(stats,quantile)
+importFrom(stats,runif)
+importFrom(stats,sd)
+importFrom(stats,weighted.mean)
